--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,24 @@
 # setting application port
 server.port=8000
 
+# H2
+spring.h2.console.enabled=true
+spring.jpa.show_sql=true
+spring.datasource.url=jdbc:h2:mem:testdb
+
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+
+# MySQL
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Live Reload
+spring.devtools.livereload.enabled=true
+
+#Tymeleaf cache
+spring.thymeleaf.cache=false
